# LearningHaskell

./: README.md
additionTest/: addition.cabal  addition.hs
additionTest/.stack-work/: stack.sqlite3
adversity/: either.hs  exercises.hs  kind.hs  maybe.hs
algebraicDatatypes/: asPatterns.hs  binaryTrees.hs  exercise1.hs  logicGoats.hs  notes.hs  notes2.hs  phone.hs
applicative/: applicative.cabal
applicative/.stack-work/: stack.sqlite3
applicative/src/: Main.hs  notes.hs
dataTypes/: exercise1.hs
first/: test.hs
foldable/: foldable.cabal
foldable/.stack-work/: stack.sqlite3
folding/: database.hs  examples.hs  practice.hs  scans.hs
functionalPatterns/: composition.hs  patterns.hs  pointFree.hs  practice.hs
functor/: functor.cabal
functor/.stack-work/: stack.sqlite3
functor/.stack-work/ghci/b495aa89/: cabal_macros.h
functor/.stack-work/ghci/f206eede/: cabal_macros.h
functor/src/: Main.hs  notes.hs
hangman/: hangman.cabal
lists/: cipher.hs  comprehensions.hs  exercises.hs  lists1.hs  standardFunc.hs
misc/: cipher.hs  exercises.hs
monad/: monad.cabal
monoid/: monoid.cabal
reader/: reader.cabal
recursion/: examples.hs  wordNumber.hs
strings/: practice.hs  print3Flipped.hs  reverse.hs  string2.hs  string3.hs
testExample/: ChangeLog.md  testExample.cabal
traversable/: traversable.cabal
traversable/.stack-work/: stack.sqlite3
traversable/.stack-work/ghci/03f4cb9f/: cabal_macros.h
traversable/src/: Notes.hs
typeClasses/: equality.hs  ordering.hs  show.hs  typeMatching.hs
types2/: brokenArith.hs  singingRain.hs
(+55 files in other folders)
