name:                functor
version:             0.1.0.0
homepage:            https://github.com/githubuser/functor#readme
license:             BSD3
license-file:        LICENSE
author:              Carter Weinberg
maintainer:          example@example.com
copyright:           2020 Carter Weinberg
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable functor
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , hspec
                       , QuickCheck
