name:                traversable
version:             0.1.0.0
homepage:            https://github.com/githubuser/traversable#readme
license:             BSD3
license-file:        LICENSE
author:              Carter Weinberg
copyright:           2020 Carter Weinberg
category:            Text
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable traversable
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
